-*-change-log-*-
1.6.0 Florian Eggenhofer <egg@cs.uni-freiburg.de> tbd
	* Added offline mode for blast calls and sequence retrieval
	* Changed to Biobase repository layout
1.5.0 Florian Eggenhofer <egg@cs.uni-freiburg.de> 4. March 2019
	* Enabled initialization from multi-line fasta
1.4.0 Florian Eggenhofer <egg@cs.uni-freiburg.de> 9. December 2018
	* Switched to Biobase libraries
	* RNAlien is now using json based blast requests
1.3.8 Florian Eggenhofer <egg@cs.uni-freiburg.de> 3. April 2019
	* Fix for outdated ca-certificates
1.3.7 Florian Eggenhofer <egg@cs.uni-freiburg.de> 13. March 2017
	* Removed optimization flags that prevent hackage upload
1.3.6 Florian Eggenhofer <egg@cs.uni-freiburg.de> 5. March 2017
	* SelectSequences moved to own repository, removed tool from package
	* Clustal result file is now also written without evaluation step
1.3.5 Florian Eggenhofer <egg@cs.uni-freiburg.de> 5. March 2017
	* Added a commandline switch to check setup and network connection, improved tempdir handling
1.3.4 Florian Eggenhofer <egg@cs.uni-freiburg.de> 2. March 2017
	* More changes toward bioconda compatibility, changed compiler optimization flag to -O
1.3.3 Florian Eggenhofer <egg@cs.uni-freiburg.de> 1. March 2017
	* Further changes to stack.yaml
1.3.2 Florian Eggenhofer <egg@cs.uni-freiburg.de> 8. February 2017
	* Minor fix to stack.yaml for bioconda recipe
1.3.1 Florian Eggenhofer <egg@cs.uni-freiburg.de> 6. February 2017
	* Updated version constraints for ClustalParser supporting multi-line consensus secondary structure
1.3.0 Florian Eggenhofer <egg@cs.uni-freiburg.de> 20. January 2017
	* Included bugfix from ViennaRNAparser concerning RNAalifold systemcall
1.2.9 Florian Eggenhofer <egg@cs.uni-freiburg.de> 8. January 2017
	* Dropped dependency on rnazSelectSequences.pl for evaluation step
	* Select sequences can now print a similarity matrix
	* Internal sequence selection is substantially faster due to text-metrics